myteo/test/parser/ast/expression/empty-parens-error.exp
ERROR: test/parser/ast/expression/empty-parens-error.myte:1:1 Unexpected token ")"
 1 | ();
   |  ^
